<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="vm"
            type="com.example.vinilosapp.presentation.vm.AlbumDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/artwork"
                imageUrl="@{vm.selectedAlbum.cover}"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/album_img"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/name_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="9dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/artist_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artwork"
                tools:text="Believe" />

            <TextView
                android:id="@+id/artist_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/tracks_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_txt"
                tools:text="Disturbed" />

            <TextView
                android:id="@+id/tracks_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/album_tracks_title"
                android:textSize="18sp"
                android:textStyle="italic"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/album_tracks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artist_txt" />

            <TextView
                android:id="@+id/album_tracks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/album_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tracks_title"
                tools:text="Prayer, Liberate - Amended Version, Disturbed, Awaken, Believe" />

            <TextView
                android:id="@+id/album_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_tracks" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

