...
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:id="@+id/search_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_coleccionista"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions"
                android:autofillHints="" />
...
